vcluster_versioned_docs/version-0.35.0/production-guide/internal-k8s-platform.mdx
---
title: Internal Kubernetes Platform
sidebar_label: Internal Kubernetes Platform
sidebar_position: 5
description: Provide isolated, long-running tenant clusters for internal engineering teams and services. Day 0, Day 1, and Day 2 path for internal Kubernetes platforms.
---

import SharedNodesSuitability from '@site/vcluster/_partials/admonitions/shared-nodes-suitability.mdx';

Provide isolated Kubernetes environments for internal engineering teams, business units, and the services they own. Clusters are long-running and may carry internal production traffic. Tenant isolation gives each team its own control plane and prevents noisy-neighbor effects across teams. Shared nodes avoid standing up separate infrastructure per team.

Large enterprises use this model to replace shared cluster namespaces with stronger tenant isolation. Each team gets their own control plane, their own RBAC, and their own view of Kubernetes, without owning the infrastructure underneath.

<SharedNodesSuitability />

This path targets your own internal teams and services. If tenants are external customers or you're reselling access, follow the [AI Cloud](./ai-cloud.mdx) or [Single-Tenant Per Customer](./single-tenant.mdx) paths, which use private nodes.

**Typical stack:** Platform on an existing Kubernetes cluster. Shared node pool with optional dedicated node pools for teams with elevated security or performance requirements.

**What makes this path different:** These clusters are long-lived and may host internal production services, not just dev workloads. Governance, isolation, and uptime are the priorities. If you also need ephemeral CI clusters, that is the [CI/CD Platform](./cicd-platform.mdx) path.

## Day 0: Design decisions

| Decision | Read next | Outcome |
| --- | --- | --- |
| Define the tenancy model | [Projects](/platform/administer/projects/create), [templates](/platform/administer/templates/overview) | Decide whether teams get one cluster per team, one per project, or on-demand. Set a default template enforced across all teams. |
| Define access and governance model | [SSO](/platform/configure/platform-configs/single-sign-on), [RBAC](/platform/administer/users-permissions/overview), [network policy](../configure/vcluster-yaml/policies/network-policy.mdx) | Map your identity provider to Platform roles. Define which teams can create clusters, how many, and with what resource limits. |
| Define resource quotas | [Quotas](/platform/administer/projects/quotas), [resource quota](../configure/vcluster-yaml/policies/resource-quota.mdx) | Set per-team cluster count, CPU, and memory limits. Prevent runaway consumption without requiring ops approval for every cluster. |
| Plan sync configuration | [Sync configuration](../configure/vcluster-yaml/sync/README.mdx) | Decide which control plane cluster resources (storage classes, ingress controllers, secrets) are visible inside tenant clusters. |
| Define uptime requirements | [HA](../deploy/control-plane/kubernetes-pod/high-availability.mdx), [backing store](../configure/vcluster-yaml/control-plane/components/backing-store/README.mdx) | Determine if tenant clusters need HA control planes. Most internal platforms start single-replica and graduate to HA as adoption grows. |

## Day 1: Stand up the platform

1. Install [vCluster Platform](/platform/install/quick-start-guide) on your existing Kubernetes cluster.
2. Configure [SSO](/platform/configure/platform-configs/single-sign-on) and [team permissions](/platform/administer/users-permissions/overview).
3. Create [projects](/platform/administer/projects/create) aligned to your org structure (team, BU, or environment).
4. Define [templates](/platform/administer/templates/overview) that enforce your baseline: [pod security standard](../configure/vcluster-yaml/policies/pod-security-standard.mdx), [network policy](../configure/vcluster-yaml/policies/network-policy.mdx), resource quota, and sync configuration.
5. Apply [quotas](/platform/administer/projects/quotas) per project to cap resource consumption.
6. Enable [monitoring](/platform/maintenance/monitoring/overview) for the Platform layer and expose cluster-level metrics to Platform's fleet view.
7. Validate self-service and isolation. A team lead creates a cluster, deploys a workload, and verifies that another team's project is not visible. Confirm the control plane cluster's CNI enforces NetworkPolicy. With `sync.toHost.networkPolicies` enabled, apply a default-deny policy in a tenant namespace and confirm the blocked connection is refused. If traffic still flows, shared-node network isolation isn't in effect. See the [security baseline](../security/README.mdx).

## Day 2: Operate

| Operation | Read next |
| --- | --- |
| Monitor cluster health and resource usage across teams | [Fleet monitoring](/platform/maintenance/monitoring/fleet-monitoring-otel), [monitoring overview](/platform/maintenance/monitoring/overview) |
| Manage cluster lifecycle and upgrades | [Upgrade vCluster](../manage/upgrade/upgrade-version.mdx), [upgrade Platform](/platform/maintenance/upgrade-migrate/upgrade) |
| Respond to quota violations or runaway clusters | [Quotas](/platform/administer/projects/quotas), [resource quota](../configure/vcluster-yaml/policies/resource-quota.mdx) |
| Back up and restore tenant clusters | [Snapshots](../manage/backup-restore/backup.mdx), [restore](../manage/backup-restore/restore.mdx) |
| Rotate certificates | [Certificate rotation](../manage/certificates.mdx) |
